[gd_scene load_steps=29 format=3 uid="uid://34823h60oyfl"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_4mgtl"]
[ext_resource type="SpriteFrames" uid="uid://ebp4ivpy3b1i" path="res://entities/player/resources/normal/yellow.tres" id="2_wwtts"]
[ext_resource type="SpriteFrames" uid="uid://dloj8jbylvd7n" path="res://entities/player/resources/ppe.tres" id="3_6vf72"]
[ext_resource type="Texture2D" uid="uid://duojx0pr08l84" path="res://entities/player/assets/buttons/Hand.png" id="5_cso8u"]
[ext_resource type="Resource" uid="uid://c8lug3bqh2k32" path="res://entities/player/kinematics/resources/PPEMovement.tres" id="7_gybxq"]
[ext_resource type="Resource" uid="uid://bct8nt4pnuurf" path="res://entities/player/kinematics/resources/HungeredMovement.tres" id="7_lv5nc"]
[ext_resource type="Texture2D" uid="uid://cg6ikyw3ndy0g" path="res://entities/player/assets/buttons/shadedDark48.png" id="8_rikmk"]
[ext_resource type="Script" path="res://entities/player/room_notifier.gd" id="10_4qmyw"]
[ext_resource type="Texture2D" uid="uid://ddbir6xhbq1s7" path="res://scenes/main/assets/objects/book.png" id="10_qx2lq"]
[ext_resource type="Script" path="res://finite_state_machine/NPCFiniteStateMachine.gd" id="11_jed4q"]
[ext_resource type="Texture2D" uid="uid://cj0eo7j37p7h2" path="res://scenes/main/assets/task_help_screen/task_help_screen.png" id="11_wwqpa"]
[ext_resource type="Texture2D" uid="uid://c1kvv50ksspq8" path="res://scenes/main/assets/objects/back_button.png" id="12_8gf4b"]
[ext_resource type="PackedScene" uid="uid://m8wvbco2ickv" path="res://entities/player/kinematics/kinematics_manager.tscn" id="12_kdvdi"]
[ext_resource type="Script" path="res://entities/NPCs/InjuredState.gd" id="12_qpuyx"]
[ext_resource type="Material" uid="uid://kcqelvm2mcx5" path="res://unmodulated.tres" id="14_syiyl"]
[ext_resource type="Texture2D" uid="uid://pmsassij0oe5" path="res://assets/APfkB6p.png" id="16_f0f6a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xw2om"]
size = Vector2(22.9375, 47)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_t532w"]
properties/0/path = NodePath(".:syncPos")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:syncItemEffectRotation")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath(".:state")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath(".:syncPickedItemPosition")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath(".:syncItemFlip")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false
properties/5/path = NodePath(".:injured")
properties/5/spawn = true
properties/5/sync = true
properties/5/watch = false
properties/6/path = NodePath("SpaceOutfit:animation")
properties/6/spawn = true
properties/6/sync = true
properties/6/watch = false
properties/7/path = NodePath("SpaceOutfit:frame")
properties/7/spawn = true
properties/7/sync = true
properties/7/watch = false
properties/8/path = NodePath("PPEOutfit:animation")
properties/8/spawn = true
properties/8/sync = true
properties/8/watch = false
properties/9/path = NodePath("PPEOutfit:frame")
properties/9/spawn = true
properties/9/sync = true
properties/9/watch = false
properties/10/path = NodePath("SpaceOutfit:flip_h")
properties/10/spawn = true
properties/10/sync = true
properties/10/watch = false
properties/11/path = NodePath("PPEOutfit:flip_h")
properties/11/spawn = true
properties/11/sync = true
properties/11/watch = false
properties/12/path = NodePath("SpaceOutfit:visible")
properties/12/spawn = true
properties/12/sync = true
properties/12/watch = false
properties/13/path = NodePath("PPEOutfit:visible")
properties/13/spawn = true
properties/13/sync = true
properties/13/watch = false
properties/14/path = NodePath(".:ppe_worn")
properties/14/spawn = true
properties/14/sync = true
properties/14/watch = false
properties/15/path = NodePath(".:hit_times")
properties/15/spawn = true
properties/15/sync = true
properties/15/watch = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v81am"]
size = Vector2(31, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfryf"]
size = Vector2(51, 63)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_dfim5"]
properties/0/path = NodePath(".:treatment_steps")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7suy"]
size = Vector2(77, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jfw51"]
size = Vector2(11, 10)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_e4jha"]
blend_mode = 1
light_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_knrd8"]
radius = 40.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_33r1s"]
blend_mode = 1
light_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_l1das"]
radius = 700.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vprjd"]
blend_mode = 1
light_mode = 1

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 30
position = Vector2(2.08165e-12, 2.08165e-12)
collision_layer = 2
collision_mask = 145
script = ExtResource("1_4mgtl")

[node name="SpaceOutfit" type="AnimatedSprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.3, 0.3)
sprite_frames = ExtResource("2_wwtts")
animation = &"idle"

[node name="PPEOutfit" type="AnimatedSprite2D" parent="."]
position = Vector2(2.08165e-12, -4.5)
scale = Vector2(1.5, 1.52632)
sprite_frames = ExtResource("3_6vf72")
animation = &"injured"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.531245, 0.5)
shape = SubResource("RectangleShape2D_xw2om")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
process_callback = 0

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(1.95503e-05, -30.5)
scale = Vector2(1.15167, 0.63645)
shadow_enabled = true
texture = ExtResource("16_f0f6a")
texture_scale = 0.29

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_t532w")

[node name="PickUpItemPositionRotation" type="Node2D" parent="."]
position = Vector2(1, 10)

[node name="PickUpItemPosition" type="Node2D" parent="PickUpItemPositionRotation"]
position = Vector2(12, -8.37088e-15)

[node name="LadderCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, 30)
collision_mask = 16
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="PickUpArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 640

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_v81am")

[node name="InteractableArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="InteractableCollision" type="CollisionShape2D" parent="InteractableArea"]
shape = SubResource("RectangleShape2D_bfryf")

[node name="KinematicsManager" parent="." instance=ExtResource("12_kdvdi")]
HUNGRY_MOVEMENT_DATA = ExtResource("7_lv5nc")
PPE_MOVEMENT_DATA = ExtResource("7_gybxq")

[node name="ClothingHead" type="Node2D" parent="."]
position = Vector2(0, 2)

[node name="ClothingTorso" type="Node2D" parent="."]

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("11_jed4q")

[node name="InjuredState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("12_qpuyx")
actor = NodePath("../..")
animator = NodePath("../../SpaceOutfit")

[node name="Timer" type="Timer" parent="FiniteStateMachine/InjuredState"]
wait_time = 0.5

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="FiniteStateMachine/InjuredState"]
replication_config = SubResource("SceneReplicationConfig_dfim5")

[node name="TreatmentArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreatmentArea"]
shape = SubResource("RectangleShape2D_t7suy")

[node name="RoomNotifier" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 0
script = ExtResource("10_4qmyw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomNotifier"]
position = Vector2(0.5, -10)
shape = SubResource("RectangleShape2D_jfw51")

[node name="ActivateButton" type="TouchScreenButton" parent="."]
material = SubResource("CanvasItemMaterial_e4jha")
position = Vector2(185, 83)
scale = Vector2(0.5, 0.492)
texture_normal = ExtResource("8_rikmk")
shape = SubResource("CircleShape2D_knrd8")

[node name="InteractButton" type="TouchScreenButton" parent="."]
material = SubResource("CanvasItemMaterial_33r1s")
position = Vector2(149, 98)
scale = Vector2(0.019, 0.018)
texture_normal = ExtResource("5_cso8u")
shape = SubResource("CircleShape2D_l1das")

[node name="InformationButton" type="TouchScreenButton" parent="."]
material = SubResource("CanvasItemMaterial_vprjd")
position = Vector2(165, -109)
scale = Vector2(1.175, 1.1875)
texture_normal = ExtResource("10_qx2lq")
texture_pressed = ExtResource("10_qx2lq")

[node name="GameInfo" type="Sprite2D" parent="."]
visible = false
light_mask = 0
z_index = 40
material = ExtResource("14_syiyl")
position = Vector2(-1.12993, 0.507374)
scale = Vector2(0.279872, 0.281983)
texture = ExtResource("11_wwqpa")

[node name="ExitInfoButton" type="TouchScreenButton" parent="."]
visible = false
z_index = 45
material = ExtResource("14_syiyl")
position = Vector2(-237, -134)
scale = Vector2(1.34, 1.48148)
texture_normal = ExtResource("12_8gf4b")
texture_pressed = ExtResource("12_8gf4b")

[connection signal="body_entered" from="PickUpArea" to="." method="_on_pick_up_area_body_entered"]
[connection signal="timeout" from="FiniteStateMachine/InjuredState/Timer" to="FiniteStateMachine/InjuredState" method="_on_timer_timeout"]
[connection signal="body_entered" from="TreatmentArea" to="FiniteStateMachine/InjuredState" method="_on_treatment_area_body_entered"]
[connection signal="pressed" from="InteractButton" to="." method="_on_interact_button_pressed"]
[connection signal="pressed" from="InformationButton" to="." method="_on_information_button_pressed"]
[connection signal="pressed" from="ExitInfoButton" to="." method="_on_exit_info_button_pressed"]
